# distroless

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  BUILD  BUILD.dotnet  BUILD.jetty  BUILD.nodejs  CONTRIBUTING.md  MODULE.bazel  PACKAGE_METADATA.md  README.md  RELEASES.md  SECURITY.md  SUPPORT_POLICY.md  WORKSPACE  _helpful_commands.txt  buildifier.sh  busybox_archives.bzl  checksums.bzl  cloudbuild.yaml  cloudbuild_bazel.sh  cloudbuild_cosign.sh  cloudbuild_docker.sh  cloudbuild_jq.sh  cosign.pub  debian_archives.bzl  debian_packages.yaml  debian_snapshots.yaml  debian_versions.bzl  distro.bzl  docker-compose.yaml  dotnet.build.sh  dotnet.debian_archives.bzl  dotnet.debian_packages.yaml  dotnet.debian_snapshots.yaml  dotnet.debian_versions.bzl  (+36 more)
.cloudbuild/: cloudbuild.yaml  cloudbuild_cosign.sh  cloudbuild_docker.sh  lifecycle_tag.sh  lifecycle_tag.yaml  release.sh
.disabled_.github/: dependabot.yml
.disabled_.github/ISSUE_TEMPLATE/: actionable-debian-cve.md  actionable-non-debian-cve.md  bug_report.md
.disabled_.github/workflows/: buildifier.yaml  ci-cache.yaml  ci-pkg-mgr.yaml  ci.yaml  examples.yaml  pylint.yaml  scorecards-analysis.yml  update-deb-package-snapshots.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: actionable-debian-cve.md
.github/workflows/: build-and-publish.yaml  buildifier.yaml  check-ldconfig.yaml  ci-cache.yaml  ci-pkg-mgr.yaml  ci.bazelrc  ci.yaml  config-diff.yaml  examples.yaml  image-check.yaml  main.yml  pr.yaml  publish-debug.yaml  push-images.yaml  pylint.yaml  scorecards-analysis.yml  update-deb-package-non-snapshots.yml  update-deb-package-snapshots.yml  update-debian-packages.yaml  update-node-archives.yml  update-temurin-packages.yml
base/: BUILD  README.md  base.bzl  config.bzl  distro.bzl  nsswitch.tar  passwd  test.sh  tmp.tar  usrmerge.tar
base/os_release/: _debian10  _debian9
base/testdata/: base.yaml  certs.yaml  check_certs.go  debian10.yaml  debian11.yaml  debian12.yaml  debian13.yaml  debian9.yaml  debug.yaml  static.yaml
build_tar/: BUILD  README.md  archive.py  build_tar.py  helpers.py
bun/: BUILD  README.md  bun.bzl  config.bzl  control
bun/testdata/: bun.yaml  check_certificate.yaml
busybox/: BUILD
busybox/testdata/: debug.yaml
cacerts/: BUILD  cacerts.bzl  extract.sh  java.bzl
cacerts/jksutil/: BUILD  README.md  certificate.go  certificate_test.go  jks.go  main.go  test.crt  test_jks.sh
cc/: BUILD  README.md  cc.bzl  config.bzl
common/: BUILD.bazel  variables.bzl
common/package/: bookworm.lock.json  bookworm_java.lock.json  bookworm_java.yaml  bookworm_python.lock.json  bullseye.lock.json  bullseye_java.lock.json  bullseye_python.lock.json  repositories.bzl
cpus/: BUILD
deb_helper/: BUILD  README.md  cloudbuild.yaml  deb_file_loader.py  deb_helper.bzl  deb_packages.bzl  update_workspace.py
deb_loader/: README.md  cloudbuild.yaml  deb_file_loader.py  deb_loader.bzl  deb_packages.bzl
deb_packages/: README.md  deb_packages.bzl
debian_package_manager/: .gitignore  Makefile  README.md  go.mod  go.sum
dotnet/: BUILD  README.md
dotnet-utils/: dotnet-utils.sln
examples/: BUILD  main.go  test.sh
gcscache/: .gitignore  Makefile  README.md  cloudbuild.yaml  go.mod  go.sum
hack/: bazel_run.sh  docker_tag_or_push.sh  print-workspace-status.sh
java/: BUILD  BUILD.jdk11  BUILD.jdk8  BUILD.jetty  BUILD.jre8  BUILD.tomcat  README.md  cloudbuild.yaml  config.bzl  control  java.bzl  jre_ver.bzl
knife.d/: update_bun_archives.js  update_java_archives.sh  update_java_versions.sh  update_node_archives.js  update_node_archives_test.js
locale/: BUILD  extract.sh  locale.bzl
nodejs/: BUILD  BUILD.nodejs  README.md  config.bzl  control  node_arch.bzl  nodejs.bzl
oci/: defs.bzl  rust_image.bzl
os_release/: BUILD  os_release.bzl
package_manager/: BUILD  README.md  archive.py  cloudbuild.yaml  dpkg.bzl  dpkg_extract.sh  dpkg_parser.py  package_manager.bzl  parse_metadata.py  parse_metadata_test.py  tar.py  util.py  util_test.py  version_utils.py
php/: BUILD  config.bzl  debian_archives.bzl  debian_packages.yaml  debian_snapshots.yaml  debian_versions.bzl  php_core_libs.bzl  php_extensions.bzl  php_module_matrix.bzl  php_paths.bzl  php_version_dependencies.bzl  php_versions.bzl
pkg/: BUILD  debian_archive.bzl  debian_spdx.bzl  debian_spdx.go  dpkg_status.bzl  http_archive_sbom.bzl  oci_image_spdx.bzl
poc/: BUILD.bazel  runner_probe_test.sh
private/: stamp.bash  stamp.sh
private/pkg/: BUILD  BUILD.bazel  debian_archive.bzl  debian_spdx.bzl  debian_spdx.go  dpkg_status.bzl  dpkg_status.go  http_archive_sbom.bzl  oci_image_spdx.bzl  oci_image_spdx.go
private/pkg/test/oci_image/: BUILD.bazel  fat_image_sbom.spdx.json  image_amd64.spdx.json  image_arm64.spdx.json
private/repos/: java.MODULE.bazel
private/repos/deb/: bookworm.lock.json  bookworm.yaml  bookworm_java.lock.json  bookworm_java.yaml  bookworm_python.lock.json  bookworm_python.yaml  bookworm_s390x.lock.json  bookworm_s390x.yaml  bullseye.lock.json  bullseye.yaml  bullseye_java.lock.json  bullseye_java.yaml  bullseye_python.lock.json  bullseye_python.yaml  deb.MODULE.bazel  package.BUILD.tmpl  packages.bzl  repositories.bzl  trixie.lock.json  trixie.yaml  trixie_adoptium.lock.json  trixie_adoptium.yaml  trixie_java.lock.json  trixie_java.yaml  trixie_python.lock.json  trixie_python.yaml
private/repos/java_temurin/: java.MODULE.bazel  java_17.MODULE.bazel  java_21.MODULE.bazel  java_25.MODULE.bazel
provenance/: .gitignore  build-distroless-task.yaml  chains-config.yaml  distroless-provenance-task.yaml  go.mod  go.sum  provenance-pipeline.yaml  provenance-task.yaml  provenance.go
python2.7/: BUILD  README.md
python3/: BUILD  README.md  config.bzl  ldconfig.bzl  python.bzl  version.bzl  version_test.bzl
scripts/: update_java_archives.sh  update_node_archives.js
security-probes/: BUILD.bazel  runner_escalation_probe_test.sh
static/: BUILD  config.bzl  nsswitch.conf  static.bzl
tools/: BUILD  archive.py  build_tar.py  passwd.bzl
(+337 files in other folders)
