"repositories for java"

#VERSION 21.0.6

java = use_extension("//private/extensions:java.bzl", "java")
java.archive(
    name = "temurin21_jre_amd64",
    sha256 = "7fc9d6837da5fa1f12e0f41901fd70a73154914b8c8ecbbcad2d44176a989937",
    strip_prefix = "jdk-21.0.6+7-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.6%2B7/OpenJDK21U-jre_x64_linux_hotspot_21.0.6_7.tar.gz"],
    version = "21.0.6+7",
    plain_version = "21.0.6",
    architecture = "amd64",
)
java.archive(
    name = "temurin21_jdk_amd64",
    sha256 = "a2650fba422283fbed20d936ce5d2a52906a5414ec17b2f7676dddb87201dbae",
    strip_prefix = "jdk-21.0.6+7",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.6%2B7/OpenJDK21U-jdk_x64_linux_hotspot_21.0.6_7.tar.gz"],
    version = "21.0.6+7",
    plain_version = "21.0.6",
    architecture = "amd64",
)
java.archive(
    name = "temurin21_jre_arm64",
    sha256 = "f1b78f2bd6d505d5e0539261737740ad11ade3233376b4ca52e6c72fbefd2bf6",
    strip_prefix = "jdk-21.0.6+7-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.6%2B7/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.6_7.tar.gz"],
    version = "21.0.6+7",
    plain_version = "21.0.6",
    architecture = "arm64",
)
java.archive(
    name = "temurin21_jdk_arm64",
    sha256 = "04fe1273f624187d927f1b466e8cdb630d70786db07bee7599bfa5153060afd3",
    strip_prefix = "jdk-21.0.6+7",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.6%2B7/OpenJDK21U-jdk_aarch64_linux_hotspot_21.0.6_7.tar.gz"],
    version = "21.0.6+7",
    plain_version = "21.0.6",
    architecture = "arm64",
)
java.archive(
    name = "temurin21_jre_ppc64le",
    sha256 = "381e31581af3858d4c471829c3da3263e83dfe8ac5d36b58403babb57f6e202c",
    strip_prefix = "jdk-21.0.6+7-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.6%2B7/OpenJDK21U-jre_ppc64le_linux_hotspot_21.0.6_7.tar.gz"],
    version = "21.0.6+7",
    plain_version = "21.0.6",
    architecture = "ppc64le",
)
java.archive(
    name = "temurin21_jdk_ppc64le",
    sha256 = "163724b70b86d5a8461f85092165a9cc5a098ed900fee90d1b0c0be9607ae3d2",
    strip_prefix = "jdk-21.0.6+7",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.6%2B7/OpenJDK21U-jdk_ppc64le_linux_hotspot_21.0.6_7.tar.gz"],
    version = "21.0.6+7",
    plain_version = "21.0.6",
    architecture = "ppc64le",
)
use_repo(java, "java_versions", "temurin21_jdk_amd64", "temurin21_jdk_arm64", "temurin21_jdk_ppc64le", "temurin21_jre_amd64", "temurin21_jre_arm64", "temurin21_jre_ppc64le")
