"repositories for java"

include("//private/repos/java_temurin:java_21.MODULE.bazel")

java = use_extension("//private/extensions:java.bzl", "java")
use_repo(
    java,
    "java_versions",
    "temurin21_jdk_amd64",
    "temurin21_jdk_arm64",
    "temurin21_jdk_s390x",
    "temurin21_jdk_ppc64le",
    "temurin21_jre_amd64",
    "temurin21_jre_arm64",
    "temurin21_jre_s390x",
    "temurin21_jre_ppc64le",
)
