"repositories for java 21"

#VERSION 21.0.9

java = use_extension("//private/extensions:java.bzl", "java")
java.archive(
    name = "temurin21_jre_amd64",
    architecture = "amd64",
    plain_version = "21.0.9",
    sha256 = "aeab55d064a1a27a3744b0880b9b414077b4ed2b1790817eea3df60aec946431",
    strip_prefix = "jdk-21.0.9+10-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jre_x64_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jdk_amd64",
    architecture = "amd64",
    plain_version = "21.0.9",
    sha256 = "810d3773df7e0d6c4394e4e244b264c8b30e0b05a0acf542d065fd78a6b65c2f",
    strip_prefix = "jdk-21.0.9+10",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jdk_x64_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jre_arm64",
    architecture = "arm64",
    plain_version = "21.0.9",
    sha256 = "1d041073c65e834bdb4da732485a54ff829859dcd1549e7992f15bd73341be29",
    strip_prefix = "jdk-21.0.9+10-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jre_aarch64_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jdk_arm64",
    architecture = "arm64",
    plain_version = "21.0.9",
    sha256 = "edf0da4debe7cf475dbe320d174d6eed81479eb363f41e38a2efb740428c603a",
    strip_prefix = "jdk-21.0.9+10",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jdk_aarch64_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jre_s390x",
    architecture = "s390x",
    plain_version = "21.0.9",
    sha256 = "951eb9fd40e4478b0a7069b672bc0307f59045d756dd3ca6ed0b1ea12ab41ca2",
    strip_prefix = "jdk-21.0.9+10-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jre_s390x_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jdk_s390x",
    architecture = "s390x",
    plain_version = "21.0.9",
    sha256 = "e8ede0fb48aaa3a0cc1ac7c8522f8ca7938bdbb8be0d603b61134de7f898aff4",
    strip_prefix = "jdk-21.0.9+10",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jdk_s390x_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jre_ppc64le",
    architecture = "ppc64le",
    plain_version = "21.0.9",
    sha256 = "4973d6a43393854ccabd32bf7a1306788831586166fc8f5fa34a9df428366014",
    strip_prefix = "jdk-21.0.9+10-jre",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jre_ppc64le_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
java.archive(
    name = "temurin21_jdk_ppc64le",
    architecture = "ppc64le",
    plain_version = "21.0.9",
    sha256 = "ac5a0394a234269b4e20459649ac93cb702cde29b3e46a0bcf3aa53958f2d4a4",
    strip_prefix = "jdk-21.0.9+10",
    urls = ["https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.9%2B10/OpenJDK21U-jdk_ppc64le_linux_hotspot_21.0.9_10.tar.gz"],
    version = "21.0.9+10",
)
